--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 */
 *{
   /* zorg dat elke box een gestippelde rand krijgt, zodat je de afmeting goed kunt zien */
-  /* border: 1px dotted black; */
+  border: 1px dotted black; 
   /* zorg dat elke box een doorzichtige donkere achtergrond krijgt, hoe meer boxen in elkaar hoe donkerder de achtergrondkleur *
   /* background-color: rgba(0,0,0,5%); */
 }
@@ -33,7 +33,7 @@ html, body {
 
 main 
     margin: 0 auto;
-    width: 700px;
+    width: 2000px;
     position: relative;
 }
 
@@ -54,14 +54,14 @@ footer {
     padding-bottom: 10px;
 }
 
-kolomLinks { 
+.kolomLinks { 
   float: left;
   width: 200px
 }
 
-kolomRechts {
+.kolomRechts {
   float: left;
-  width: calc(100%-200px, 40px)
+  width: calc(100% - 200px - 40px)
 }
 
 /* specifieke stijlen */
