--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html, body {
     background-color: rgb(25, 8, 255);  
     
     color: #ffffff;
-    font: Verdana, Arial, Sans-Serif;
+    font: Kefa;
 
 main 
     margin: 0 auto;
